<resources>
    <string name="app_name">Beta test</string>

    <string name="action_settings">Settings</string>


    <string name="product_name_hint">Enter product name</string>
    <string name="product_price_hint">Enter product price</string>
    <string name="product_name_label">Product name:</string>
    <string name="product_price_label">Product price:</string>
    <string name="product_code_label">Product code:</string>
    <string name="products_list_title">Товары</string>
    <string name="sales_list_title">Продажи</string>

    <string name="search">Search</string>
    <string name="product">Товары</string>
    <string name="sales">Продажи</string>
    <string name="supply">Приходы</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>


</resources>
